# ZavrsniRad

./: .gitignore  .~lock.Zavrsni_rad.doc#  CMakeLists.txt  Zavrsni_rad.doc  Zavrsni_rad.docx  Zavrsni_rad_predlozak_travanj_2020[1].doc  compare_speed.py  filogen_stablo.txt  guide_tree.txt  izgraden_msa.fasta  izgraden_msa.msf  izgraden_msa.txt  kod_msa.txt  moj_zavrsni_rad.docx  mojaproba.txt  pokreni_RV30.sh  pokreni_RV40.sh  pokreni_RV50.sh  pokreni_statistiku.sh  pom.txt  pom1.txt  pom2.txt  pom3.txt  pomocni40.txt  pomocni50.txt  primrez.txt  prosjecna_duljina.sh  za_napraviti.txt  ~$j_zavrsni_rad.docx  ~$vrsni_rad_predlozak_travanj_2020[1].doc
bb3_release/RV11/: BB11001.aln  BB11002.aln  BB11003.aln  BB11004.aln  BB11005.aln  BB11006.aln  BB11007.aln  BB11008.aln  BB11009.aln  BB11010.aln  BB11011.aln  BB11012.aln  BB11013.aln  BB11014.aln  BB11015.aln  BB11016.aln  BB11017.aln  BB11018.aln  BB11019.aln  BB11020.aln  BB11021.aln  BB11022.aln  BB11023.aln  BB11024.aln  BB11025.aln  BB11026.aln  BB11027.aln  BB11028.aln  BB11029.aln  BB11030.aln  BB11031.aln  BB11032.aln  BB11033.aln  BB11034.aln  BB11035.aln  BB11036.aln  BB11037.aln  BB11038.aln  BBS11001.aln  BBS11002.aln  (+36 more)
bb3_release/RV20/: BB20001.aln
bb3_release/RV50/: BB50001.aln
bb3_release/bali_score_src/: bali_score  clustalw.h  util.c
src/: msa.cpp
